been made to the dot betwixt file format including support for multiple 
specifications within the same file.

Betwixt 0.7 is binary compatible with 0.6 but a number of changes have been 
made to some semantics. It is believed that the impact of these changes should 
be minimal. 

For more details see the tasks and change log documents.

ENHANCEMENTS AND BUG FIXES
 * 	Fixed bug in nested element diagnosing empty elements.
 * 	Added support for polymorphic mappings. 
    This allows the type of a property to be guessed at bind time
    (rather than at compile time).
 *	Added options to context. This replaces direct flavour mechanism. 
   	(Flavour becomes just a specific option).
 * 	Factored out id storage into strategy
 *	anonymous collections now allowed in betwixt files
 *	Improved introspection support for DynaBeans
 *	Improved introspection for interfaces superinterface 
    properties now checked.
 *	Attribute suppression - Betwixt now allows the 
    expression of certain values to be suppressed through a custom strategy.
 *	Custom Dot Betwixt Documents - custom dot betwixt
    documents can be passed in directly.
 *	Multi mapping documents allowing several mappings to be
    specified within a single document.
 *	Improved support for derived beans bind time type
    population now supported and enabled by default
 *	All exceptions are now complex
 *	PropertySuppressionStrategy added which allows 
    course grained control of those properties which should be ignored by Betwixt.
 *	Improved support for java.util collections API implementations.
    Betwixt now recognizes additional properties on custom collection implementations.

DEPRECATIONS
 * 	ObjectStringConverter.objectToString replaced by method without flavour in signature 
 * 	ObjectStringConverter.stringToObject replaced by method without flavour in signature

SEMANTIC CHANGES
 * 	Betwixt now (by default) suppresses the expression of all empty attributes.