@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--build.xml generated by maven from project.xml version 0.7
-  on date June 13 2005, time 2259-->
+<!--build.xml generated by maven from project.xml version 0.8-dev
+  on date July 26 2005, time 2052-->
 
 <project default="jar" name="commons-betwixt" basedir=".">
   <property name="defaulttargetdir" value="target">
@@ -20,7 +20,7 @@
   </property>
   <property name="javadocdir" value="dist/docs/api">
   </property>
-  <property name="final.name" value="commons-betwixt-0.7">
+  <property name="final.name" value="commons-betwixt-0.8-dev">
   </property>
   <path id="build.classpath">
     <fileset dir="${libdir}">
@@ -152,7 +152,7 @@
     </tstamp>
     <property name="copyright" value="Copyright &amp;copy;  The Apache Software Foundation. All Rights Reserved.">
     </property>
-    <property name="title" value="Betwixt 0.7 API">
+    <property name="title" value="Betwixt 0.8-dev API">
     </property>
     <javadoc use="true" private="true" destdir="${javadocdir}" author="true" version="true" sourcepath="src/java" packagenames="org.apache.commons.betwixt.*">
       <classpath>
