@@ -22,7 +22,7 @@ maven.compile.debug = on
 maven.compile.optimize = off
 maven.compile.deprecation = on
 maven.compile.target = 1.1
-maven.target.source=1.2
+maven.compile.source=1.3
 
 maven.jarResources.basedir=${basedir}/src/java
 
@@ -45,5 +45,3 @@ maven.junit.fork=true
 
 betwixt.repository=scm:cvs:pserver:anoncvs@cvs.apache.org:/home/cvspublic:jakarta-commons/betwixt/
 
-maven.jdiff.old.tag=REFACTORING-BRANCH_2004-01-13_PRE-BRANCH
-maven.jdiff.new.tag=REFACTORING-BRANCH_2004-01-13
