@@ -53,6 +53,7 @@
       <item name="Tutorial"                href="/guide/tutorial.html"/>
     </menu>
     <menu name='Release Documentation'>
+        <item name='0.7' href='http://jakarta.apache.org/commons/betwixt/betwixt-0.7'/>
         <item name='0.6' href='http://jakarta.apache.org/commons/betwixt/betwixt-0.6'/>
         <item name='0.5' href='http://jakarta.apache.org/commons/betwixt/betwixt-0.5'/>
     </menu>
